@@ -8,6 +8,3 @@ export ARTIFACTORY_PASSWORD="$(credhub get -q -n /concourse/${CONCOURSE_TEAM}/ar
 envsubst < ../../settings.xml > temp.xml
 
 mv temp.xml settings.xml
-
-export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
-mvn clean test -s settings.xml
